--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
     "downloadjs": "link:@type\\downloadjs",
     "react": "^19.0.0",
