--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "@mui/material": "^7.0.2",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
+    "cropperjs": "^2.0.0",
     "downloadjs": "link:@type\\downloadjs",
+    "kraken": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-router": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/cropperjs": "^1.3.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
